2011-04-01  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/StreamingForwardMessage.h: Fix semantics of k=0.
	* src/network/JoinThread.cpp: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/AsynClient.tcc: Likewise.

2011-04-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/dmcsc.cpp: On fixing semantics of k=0.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.

2011-03-31  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: Clean up and fix memory leaks.
	Fix another corner case with inconsistency.
	* src/network/JoinThread.cpp: Likewise.

2011-03-30  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: Fix corner case: all joins are
	inconsistent wrt one pack.
	* src/network/JoinThread.cpp: Likewise.

	* include/network/OutputThread.h: Fix path.
	* src/network/Output.cpp: Likewise.

	* src/network/ConcurrentMessageDispatcher.cpp: Remove debugging
	information that potentially causes segfault!

	* include/network/JoinThread.h: Fix reset.
	* src/network/JoinThread.cpp: Liekwise.

	* src/dmcsc.cpp: Fix setting next packs.

	* src/network/OutputThread.cpp: Send duplicated models back.
	* include/network/NeighborThread.h: Remove duplication here.

2011-03-29  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Fix resetting Joiner.

	* include/network/JoinThread.h: Move partial_eqs out of process.
	* src/network/JoinThread.cpp: Likewise.

	* src/network/JoinThread.cpp: Fix asking next strategy.

	* src/solver/RelSatSolver.cpp: Send NULL pointer at the right place.

	* src/network/OutputThread.cpp: Read up to k2+1 from OUT_MQ and
	expect NULL at the end.

	* include/network/ThreadFactory.h: Quick and dirty hack: pass
	query_plan to RelSatSolver so that it can get localV easily as
	invoker is already passed there via StreamingForwardMessage.
	* src/network/RelSatSolverThread.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.