@@ -1,3 +1,7 @@
+2011-04-03  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* src/generator/staticGen.cpp: Add streaming script.
+
 2011-04-01  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* include/dmcs/StreamingForwardMessage.h: Fix semantics of k=0.
